Supports kid register and login

--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
-    "redux-form": "^7.0.4",
+    "redux-form": "^7.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
@@ -28,6 +28,12 @@
       "target": "http://localhost:8080"
     },
     "/signout": {
+      "target": "http://localhost:8080"
+    },
+    "/kid-register": {
+      "target": "http://localhost:8080"
+    },
+    "/kid-login": {
       "target": "http://localhost:8080"
     },
     "/api": {
