--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
+    "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-datepicker": "^0.55.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
