--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
   data:
     mongodb:
       database: kidsbank
+  mvc:
+    media-types:
+      xlsx: application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
