--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <dockerfile-maven-plugin.version>1.3.6</dockerfile-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -177,7 +178,7 @@
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.3.6</version>
+                <version>${dockerfile-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>default</id>
@@ -195,7 +196,24 @@
                     </buildArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <!-- for now -->
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
+
+        <extensions>
+            <extension>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-extension</artifactId>
+                <version>${dockerfile-maven-plugin.version}</version>
+            </extension>
+        </extensions>
     </build>
 
     <repositories>
@@ -235,6 +253,5 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
-
 
 </project>
