--- a/pom.xml
+++ b/pom.xml
@@ -184,8 +184,14 @@
                         <id>default</id>
                         <goals>
                             <goal>build</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>push</id>
+                        <goals>
                             <goal>push</goal>
                         </goals>
+                        <phase>pre-integration-test</phase>
                     </execution>
                 </executions>
                 <configuration>
@@ -194,15 +200,6 @@
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <!-- for now -->
-                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
