--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <dockerfile-maven-plugin.version>1.3.6</dockerfile-maven-plugin.version>
+        <dockerRegistry>registry.hub.docker.com</dockerRegistry>
     </properties>
 
     <dependencies>
@@ -195,7 +196,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <repository>registry.hub.docker.io/itzg/kidsbank-js</repository>
+                    <repository>${dockerRegistry}/itzg/kidsbank-js</repository>
                     <tag>${project.version}</tag>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
