Add external config shortcut properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   data:
     mongodb:
       database: kidsbank
+      host: ${mongodbHost:localhost}
   mvc:
     media-types:
       xlsx: application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+  social:
+    facebook:
+      app-id: ${facebookAppId:}
+      app-secret: ${facebookAppSecret:}
