--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -2,20 +2,23 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "1.0.17"
+  },
   "dependencies": {
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-datepicker": "^0.56.0",
+    "react-datepicker": "^0.60.0",
     "react-dom": "^16.0.0",
     "react-notification-system": "^0.2.16",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
