Setup for maven releases in CircleCI

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
         <dockerRegistry>registry.hub.docker.com</dockerRegistry>
     </properties>
 
+    <scm>
+        <developerConnection>scm:git:git@github.com:itzg/kidsbank-js.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -201,6 +206,15 @@
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
         </plugins>
