--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,23 +2,21 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
+defaults: &defaults
+  working_directory: /tmp
+  docker:
+    - image: circleci/openjdk:8-jdk
+
+  working_directory: ~/repo
+
+  environment:
+    MAVEN_OPTS: -Xmx3200m
+
+
 version: 2
 jobs:
   test_and_package:
-    docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
+    <<: *defaults
 
     steps:
       - checkout
@@ -58,8 +56,29 @@ jobs:
           path: /tmp/jars
           destination: jars
 
+  maven_release:
+    <<: *defaults
+
+    steps:
+      - checkout
+
+      - run: |
+        if [[ $RELEASE && $NEXT ]]; then
+          mvn -B release:prepare -DreleaseVersion=$RELEASE -DdevelopmentVersion=$NEXT
+        else
+          echo "Release skipped. Use this to perform a release:
+          curl -X POST -H "Content-Type: application/json" -d '{
+              "build_parameters": {
+                  "RELEASE": "1.1.1",
+                  "NEXT": "1.2-SNAPSHOT",
+              }
+          }' "https://circleci.com/api/v1.1/project/github/ORG/PROJECT/tree/master?circle-token=TOKEN"
+          "
+        fi
+
 workflows:
   version: 2
   test_and_package:
     jobs:
       - test_and_package
+      - maven_release
