Fix CircleCI syntax error in release run

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,18 +63,19 @@ jobs:
       - checkout
 
       - run: |
-        if [[ $RELEASE && $NEXT ]]; then
-          mvn -B release:prepare -DreleaseVersion=$RELEASE -DdevelopmentVersion=$NEXT
-        else
-          echo "Release skipped. Use this to perform a release:
-          curl -X POST -H "Content-Type: application/json" -d '{
-              "build_parameters": {
-                  "RELEASE": "1.1.1",
-                  "NEXT": "1.2-SNAPSHOT",
-              }
-          }' "https://circleci.com/api/v1.1/project/github/ORG/PROJECT/tree/master?circle-token=TOKEN"
-          "
-        fi
+          if [[ $RELEASE && $NEXT ]]; then
+            mvn -B release:prepare -DreleaseVersion=$RELEASE -DdevelopmentVersion=$NEXT
+          else
+            cat <<END
+            Release skipped. Use this to perform a release:
+            curl -X POST -H "Content-Type: application/json" -d '{
+                "build_parameters": {
+                    "RELEASE": "1.1.1",
+                    "NEXT": "1.2-SNAPSHOT",
+                }
+            }' "https://circleci.com/api/v1.1/project/github/ORG/PROJECT/tree/master?circle-token=TOKEN"
+            END
+          fi
 
 workflows:
   version: 2
