--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
           - node.labels.volumes == main
 
   kidsbank:
-    image: itzg/kidsbank-js:0.0.1-SNAPSHOT
+    image: itzg/kidsbank-js:0.1.0
     environment:
       SPRING_DATA_MONGODB_HOST: mongodb
       SPRING_SOCIAL_FACEBOOK_APPID:
