--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,17 @@
             <artifactId>spring-boot-starter-social-facebook</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-social-twitter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-social-linkedin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-github</artifactId>
+            <version>1.0.0.M4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
