--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.19.2",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-datepicker": "^0.60.2",
     "react-dom": "^16.1.1",
     "react-notification-system": "^0.2.16",
