--- a/src/main/compositions/docker-compose.yml
+++ b/src/main/compositions/docker-compose.yml
@@ -28,9 +28,10 @@ services:
           - node.labels.volumes == main
 
   kidsbank:
-    image: itzg/kidsbank-js:0.3.1
+    image: itzg/kidsbank-js:0.3.2
     env_file:
       - social.env
+      - metrics.env
     environment:
       SPRING_DATA_MONGODB_HOST: mongodb
       SPRING_PROFILES_ACTIVE: MetricsToInflux
