--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>3.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.appelgriepsch.logback</groupId>
+            <artifactId>logback-gelf-appender</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
