--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-influx</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-statsd</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
