Support logstash out to SSLed Kafka and add logstash appender

--- a/src/main/compositions/dev/logstash.conf
+++ b/src/main/compositions/dev/logstash.conf
@@ -3,12 +3,16 @@ input {
     }
 
     tcp {
-        codec => "json"
-        port => 5555
+        codec => json_lines
+        port => 4560
     }
 }
 
 output {
+
+    stdout {
+        codec => rubydebug
+    }
 
   elasticsearch {
     hosts => ["elasticsearch:9200"]
