--- a/src/main/compositions/dev/docker-compose.yml
+++ b/src/main/compositions/dev/docker-compose.yml
@@ -18,14 +18,14 @@ services:
     ports:
       - 8888:8888
   logstash:
-    image: docker.elastic.co/logstash/logstash-oss:6.1.1
+    image: docker.elastic.co/logstash/logstash-oss:${ELASTIC_VERSION:-6.1.3}
     volumes:
       - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
     environment:
       LS_JAVA_OPTS: -Xms256m -Xmx256m
     ports:
       - 9600:9600
-      - 5555:5555
+      - 4560:4560
       - 12201:12201
       - 12201:12201/udp
   telegraf:
@@ -37,7 +37,7 @@ services:
     ports:
       - 8125:8125/udp
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.1.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-6.1.3}
     volumes:
       - es_data:/usr/share/elasticsearch/data
     deploy:
@@ -52,7 +52,7 @@ services:
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
   kibana:
-    image: docker.elastic.co/kibana/kibana-oss:6.1.1
+    image: docker.elastic.co/kibana/kibana-oss:${ELASTIC_VERSION:-6.1.3}
     ports:
       - 5601:5601
 
@@ -61,7 +61,5 @@ volumes:
   es_data:
 
 configs:
-  logstash:
-    file: ./logstash.conf
   telegraf:
     file: ./telegraf.conf
