--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -29,6 +29,12 @@
       "type": "java.lang.String",
       "description": "The service name to include along with each gelf log.",
       "defaultValue": "spring-boot-application"
+    },
+    {
+      "name": "logging.logstash.destination",
+      "type": "java.lang.String",
+      "description": "The host:port of a logstash TCP input.",
+      "defaultValue": "localhost:4560"
     }
   ]
 }
