Add support for exporting metrics to Stackdriver

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-statsd</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.itzg</groupId>
+            <artifactId>stackdriver-spring-boot-autoconfigure</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -129,6 +134,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
