--- a/src/main/compositions/stage/logstash.conf
+++ b/src/main/compositions/stage/logstash.conf
@@ -6,6 +6,11 @@ input {
         codec => "json"
         port => 5555
     }
+
+    tcp {
+        codec => json_lines
+        port => 4560
+    }
 }
 
 output {
