--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ logging:
   gelf:
     protocol: TCP
     service: kidsbank
+  level:
+    org.springframework.web.servlet.DispatcherServlet: debug
 management:
   metrics:
     export:
